# OSLab2

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  thread_data.h  thread_functions.cpp  thread_functions.h
tests/: test_calculateAverage.cpp  test_findMinMax.cpp  test_replaceMinMax.cpp
